--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -10,6 +10,8 @@ html {
   box-sizing: inherit;
 }
 
+
+
 /*
  * Global layout stuff
  */
@@ -18,8 +20,18 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: "Source Sans 3", sans-serif;
 }
+
+/* nav {
+  font-family: "Bungee", sans-serif;
+  font-size: 400px;
+} */
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+
+ 
