loading up tweets from tweet object/array

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -73,7 +73,7 @@ i:hover{
 }
 
 .tweetArticleContainer header h3 {
-  color: darkgrey;
+  color: blueviolet;
   margin: 0;
   font-weight: normal;
 };
