--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,15 +3,27 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
-html {
+ html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
+.navClass {
+  display: flex;
+  justify-content: center;
+}
 
-
+i{
+  align-content: center;
+  align-items: center;
+}
+#arrowIcon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 /*
  * Global layout stuff
  */
@@ -25,6 +37,8 @@ body {
   font-family: "Source Sans 3", sans-serif;
 
 }
+
+
 
 textarea {
   font-family: "Source Sans 3", sans-serif;
@@ -68,4 +82,30 @@ textarea {
   border: 3px;
   border-color: orangered;
   
+ }
+ 
+ @media only screen and (min-width: 1024px){
+  body {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .headerContainer {
+    margin-top: 140px;
+    height: 500px;
+    width: 25%;
+    margin-left: 25px;
+  }  
+
+  article {
+    margin-top: 120px;
+    
+  }
+
+  .mainContainer {
+    margin-top: 120px;
+    margin-right: 25px;
+    width: 75%;
+  }
  }
