--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -85,4 +85,12 @@ i:hover{
   font-weight: normal;
 };
  
+/* 
+@media only screen and (min-width: 1024px) {
+  .tweetArticleContainer {
+    display: flex;
+    flex-direction: column;
 
+  }
+
+} */
