--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,7 +2,7 @@ nav {
   /* font-family: "Bungee", sans-serif; */
   color: #FFFFFF;
   width: 100%;
-  background-color: #4056A1;
+  background-color: goldenrod;
   height: 120px;
   /* line-height: 120px; */
   display: flex;
@@ -12,6 +12,7 @@ nav {
   position: fixed;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+  font-size: 1.5rem;
   
 
 }
@@ -19,7 +20,7 @@ nav {
 .navclass{
  
   font-family: "Bungee", sans-serif;
-  font-size: 18px;
+  font-size: 2rem;
 }
 
 
@@ -37,3 +38,13 @@ nav {
 }
 
 
+
+@media only screen and (min-width: 1024px){
+  nav {
+    background-color: #4056A1;
+  }
+
+  .headerContainer {
+    background-color: #4056A1;
+  }
+}
