adjusted tweets to display in reverse chronological order, and added img file and screenshots of app

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -28,7 +28,7 @@
 
   .headerContainer {
     margin-top: 140px;
-    height: 25%;
+    height: 400px;
     width: 33%;
     margin-left: 25px;
     background-color: goldenrod;
