--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,9 +1,4 @@
-/* header {
-  height: 520px; 
-  padding-top: 120px;
-  /* margin: 120px; 
-  background-color: blueviolet;
-}  */
+
 
 .headerContainer {
   display: flex;
@@ -11,19 +6,12 @@
   justify-content: center;
   align-items: center;
   padding-top: 120px;
-  /* margin: 120px; */
   background-color: goldenrod;
   width: 100%;
   
 }
 
-/* #name{
-  width: 100%;
-  align-content: center;
-} */
-
-
-
+/* media queries*/
 @media only screen and (min-width: 1024px){
 
   .headerContainer {
