--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,4 @@
 nav {
-  /* font-family: "Bungee", sans-serif; */
   color: #FFFFFF;
   width: 100%;
   background-color: goldenrod;
@@ -27,10 +26,8 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center
-  
- 
-  
+  align-items: center;
+
  }
 
 .container p {
@@ -48,8 +45,7 @@ i{
   align-items: center;
 }
 
-
-
+/*Media query*/
 @media only screen and (min-width: 1024px){
   nav {
     background-color: #4056A1;
